--- a/src/components/SellForm/SellForm.css
+++ b/src/components/SellForm/SellForm.css
@@ -25,7 +25,7 @@
 }
 
 .submit-btn {
-    background-color: #007bff;
+    background-color: #777;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -34,5 +34,5 @@
 }
 
 .submit-btn:hover {
-    background-color: #0056b3;
+    background-color: #ccc;
 }
