--- a/src/pages/Connexion/Connexion.css
+++ b/src/pages/Connexion/Connexion.css
@@ -7,9 +7,14 @@
   justify-content: center;
   height: 100vh;
   background-color: #f9f9f9;
+  background-image: url('../../images/image-connexion.jpeg'); /* Chemin relatif à l'emplacement de votre fichier CSS */
+  background-size: cover; /* Assure que l'image couvre toute la zone sans se répéter */
+  background-position: center; /* Centre l'image */
+  background-repeat: no-repeat; /* Empêche l'image de se répéter */
+  background-color: #f9f9f9; /* Couleur de fond si l'image ne charge pas */
 }
 
-form {
+.connexion-page form {
   padding: 20px;
   background: white;
   border-radius: 10px;
@@ -18,17 +23,17 @@ form {
   max-width: 400px;
 }
 
-.form-group {
+.connexion-page .form-group {
   margin-bottom: 15px;
 }
 
-.form-group label {
+.connexion-page .form-group label {
   display: block;
   margin-bottom: 5px;
   font-weight: 500;
 }
 
-.form-group input {
+.connexion-page .form-group input {
   width: 100%;
   padding: 10px;
   border-radius: 5px;
@@ -36,7 +41,7 @@ form {
   font-size: 16px;
 }
 
-button {
+.connexion-page button {
   width: 100%;
   background-color: #606060; /* Gris élégant */
   color: white;
@@ -46,11 +51,11 @@ button {
   cursor: pointer;
   font-size: 18px;
   font-weight: 500;
-  margin-top: 10px; /* Espace supplémentaire entre les boutons */
+  margin-top: 10px; /*Espace supplémentaire entre les boutons */
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-button:hover {
+.connexion-page button:hover {
   background-color: #484848; /* Gris plus foncé au survol */
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 }
